Responsiveness on Mobile Device Issue Resolved

--- a/index.html
+++ b/index.html
@@ -2,9 +2,88 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Shayan Shah | Event Landing Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+    <title>Shayan Shah | Card Slider</title>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="content">
+        <div class="info">
+          <p>
+            This <span class="main-text">animation</span> involves a series of
+            cards that can be swiped left or right, mimicking a natural swipe
+            motion. Each card smoothly slides out of view, revealing the next
+            card in the stack. The transition is seamless, with a slight bounce
+            effect at the end of the swipe to give a satisfying finish. The
+            cards could have subtle shadows and scale changes during the swipe
+            to add depth and realism to the motion. The animation is designed to
+            be responsive, working fluidly across different devices and screen
+            sizes.
+          </p>
+          <button class="btn">
+            <a href="https://www.linkedin.com/in/shayan-shah-dev/ ">Follow</a>
+          </button>
+        </div>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <span>7.4</span>
+              <h2>Spider Man</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>9.5</span>
+              <h2>Iron Soldier</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>8.1</span>
+              <h2>Super Man</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>7.4</span>
+              <h2>Spider Man</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>8.1</span>
+              <h2>Super Man</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>7.4</span>
+              <h2>Spider Man</h2>
+            </div>
+
+            <div class="swiper-slide">
+              <span>8.6</span>
+              <h2>Devil</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
